[package]
name = "zktypes"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = { version = "0.2.15", optional = true }
zeroize = { version = "1.6.0", optional = true }

[features]
default = []
hash = []
ord = []
int-conversions = []
num-traits = ["dep:num-traits"]
iter = []
zeroize = ["dep:zeroize"]
