[package]
name = "zkllvm-rslang-types"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = { version = "0.2.15", optional = true }
zeroize = { version = "1", optional = true }
ark-std = { version = "0.4.0-alpha", default-features = false, optional = true }
ark-ff = { version = "0.4.0-alpha", default-features = false, optional = true }
ark-serialize = { version = "0.4.0-alpha", default-features = false, optional = true }

[features]
default = []
hash = []
ord = []
int-conversions = []
num-traits = ["dep:num-traits"]
iter = []
zeroize = ["dep:zeroize"]
arkworks = ["dep:ark-std", "dep:ark-ff", "dep:ark-serialize",
            "hash", "ord", "int-conversions", "num-traits", "iter", "zeroize"]
