[package]
name = "zkllvm-rslang-types"
version = "0.1.0"
authors = ["=nil; Foundation"]
edition = "2021"
description = "zkLLVM field type wrappers"
readme = "README.md"
homepage = "https://github.com/NilFoundation/zkllvm"
repository = "https://github.com/NilFoundation/zkllvm-rslang-types"
license = "MIT OR Apache-2.0"
keywords = ["zkllvm", "zero-knowledge"]

[dependencies]
num-traits = { version = "0.2.15", optional = true }
zeroize = { version = "1", optional = true }
ark-std = { version = "0.4.0-alpha", default-features = false, optional = true }
ark-ff = { version = "0.4.0-alpha", default-features = false, optional = true }
ark-serialize = { version = "0.4.0-alpha", default-features = false, optional = true }

[features]
default = []
hash = []
int-conversions = []
num-traits = ["dep:num-traits"]
iter = []
zeroize = ["dep:zeroize"]
arkworks = ["dep:ark-std", "dep:ark-ff", "dep:ark-serialize",
            "hash", "int-conversions", "num-traits", "iter", "zeroize"]
